Refactoring (EntityExplorer, EntityIntrospector, PropertyFilter)